--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
   "name": "reviewit-frontend",
   "version": "0.1.0",
-  "proxy": "https://movie-review-server-sepia.vercel.app/",
+  "proxy": "http://localhost:5000/",
+  "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
